# clang-tidy-example

./: .clang-tidy  README.md
.github/workflows/: github-actions-demo.yml
src/: CMakeLists.txt  main.cpp  table.h
